initialize commit.