@@ -22,6 +22,8 @@
         <module>cargotracker</module>
     </modules>
 
+
+
     <properties>
         <java.version>17</java.version>
         <resource.delimiter>@</resource.delimiter>
@@ -29,7 +31,338 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <!--  package -->
+        <app.port>9000</app.port>
+        <app.main/>
+        <app.name>${project.artifactId}</app.name>
+        <app.output>${project.basedir}/target</app.output>
+
+        <!-- docker -->
+        <docker.baseImage>azul/zulu-openjdk:17-jre</docker.baseImage>
+
+
+        <!--  spring -->
+        <version.spring-boot>3.3.5</version.spring-boot>
+        <version.spring-cloud>2023.0.3</version.spring-cloud>
+
     </properties>
 
 
+    <build>
+        <resources>
+            <!-- 先指定 src/main/resources下所有文件及文件夹为资源文件 -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.0</version>
+                    <configuration>
+                        <compilerArgs>
+                            <arg>-parameters</arg>
+                        </compilerArgs>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>3.2.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${version.spring-boot}</version>
+                    <executions>
+                        <execution>
+                            <id>spring-boot-repackage</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>spring-boot-build-detail</id>
+                            <goals>
+                                <goal>build-info</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>appassembler-maven-plugin</artifactId>
+                    <version>2.1.0</version>
+                    <configuration>
+                        <binFolder>bin</binFolder>
+                        <configurationDirectory>config</configurationDirectory>
+                        <copyConfigurationDirectory>false</copyConfigurationDirectory>
+                        <configurationSourceDirectory>${project.basedir}/src/main/resources</configurationSourceDirectory>
+                        <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+                        <generateRepository>false</generateRepository>
+                        <encoding>UTF-8</encoding>
+                        <logsDirectory>logs</logsDirectory>
+                        <repositoryName>lib</repositoryName>
+                        <repositoryLayout>flat</repositoryLayout>
+                        <useWildcardClassPath>true</useWildcardClassPath>
+                        <projectArtifactFirstInClassPath>true</projectArtifactFirstInClassPath>
+                        <target>${project.build.directory}</target>
+                        <assembleDirectory>${project.build.directory}/assembly</assembleDirectory>
+                        <binFileName>app</binFileName>
+                        <daemons>
+                            <daemon>
+                                <id>app</id>
+                                <mainClass>${app.main}</mainClass>
+                                <platforms>
+                                    <platform>jsw</platform>
+                                </platforms>
+                                <generatorConfigurations>
+                                    <generatorConfiguration>
+                                        <generator>jsw</generator>
+                                        <configuration>
+                                            <property>
+                                                <name>wrapper.console.format</name>
+                                                <value>M</value>
+                                            </property>
+                                            <property>
+                                                <name>wrapper.logfile</name>
+                                                <value/>
+                                            </property>
+                                            <property>
+                                                <name>wrapper.logfile.format</name>
+                                                <value>M</value>
+                                            </property>
+                                            <property>
+                                                <name>wrapper.logfile.maxsize</name>
+                                                <value>10m</value>
+                                            </property>
+                                            <property>
+                                                <name>wrapper.logfile.maxfiles</name>
+                                                <value>100</value>
+                                            </property>
+                                            <property>
+                                                <name>wrapper.console.title</name>
+                                                <value>${app.name}</value>
+                                            </property>
+                                            <property>
+                                                <name>wrapper.ntservice.name</name>
+                                                <value>${app.name}</value>
+                                            </property>
+                                            <property>
+                                                <name>wrapper.ntservice.displayname</name>
+                                                <value>${app.name}</value>
+                                            </property>
+
+                                        </configuration>
+                                        <includes>
+                                            <include>windows-x86-32</include>
+                                            <include>windows-x86-64</include>
+                                            <include>linux-x86-32</include>
+                                            <include>linux-x86-64</include>
+                                            <include>macosx-universal-32</include>
+                                            <include>macosx-universal-64</include>
+                                        </includes>
+                                    </generatorConfiguration>
+                                </generatorConfigurations>
+                                <jvmSettings>
+                                    <initialMemorySize>128M</initialMemorySize>
+                                    <maxMemorySize>128M</maxMemorySize>
+                                    <extraArguments>
+                                        <extraArgument>-server</extraArgument>
+                                        <extraArgument>-Xlog:gc:logs/java_gc.log</extraArgument>
+                                        <extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument>
+                                        <extraArgument>-XX:HeapDumpPath=logs/java_heapdump.hprof</extraArgument>
+                                        <extraArgument>--add-opens=java.base/java.lang=ALL-UNNAMED</extraArgument>
+                                    </extraArguments>
+                                </jvmSettings>
+                            </daemon>
+                        </daemons>
+                        <programs>
+                            <program>
+                                <id>run</id>
+                                <mainClass>${app.main}</mainClass>
+                                <platforms>
+                                    <platform>all</platform>
+                                </platforms>
+                                <jvmSettings>
+                                    <extraArguments>
+                                        <extraArgument>-server</extraArgument>
+                                        <extraArgument>-Xlog:gc:logs/java_gc.log</extraArgument>
+                                        <extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument>
+                                        <extraArgument>-XX:HeapDumpPath=logs/java_heapdump.hprof</extraArgument>
+                                        <extraArgument>--add-opens=java.base/java.lang=ALL-UNNAMED</extraArgument>
+                                    </extraArguments>
+                                </jvmSettings>
+                            </program>
+
+                        </programs>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>assemble</goal>
+                                <goal>create-repository</goal>
+                                <goal>generate-daemons</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.6.0</version>
+                    <configuration>
+                        <appendAssemblyId>false</appendAssemblyId>
+                        <attach>true</attach>
+                        <tarLongFileMode>gnu</tarLongFileMode>
+                        <formats>
+                            <format>tar.gz</format>
+                        </formats>
+                        <outputDirectory>${app.output}</outputDirectory>
+                        <descriptors>
+                            <descriptor>${project.basedir}/src/main/assembly/bin.xml</descriptor>
+                        </descriptors>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <!-- @see https://dmp.fabric8.io/#build-configuration -->
+                    <groupId>io.fabric8</groupId>
+                    <artifactId>docker-maven-plugin</artifactId>
+                    <version>0.45.0</version>
+                    <configuration>
+                        <buildArchiveOnly>false</buildArchiveOnly>
+                        <outputDirectory>${app.output}/docker</outputDirectory>
+                        <images>
+                            <image>
+                                <name>%g/${project.artifactId}:%v</name>
+                                <build>
+                                    <from>${docker.baseImage}</from>
+                                    <tags>
+                                        <tag>${project.version}</tag>
+                                        <tag>latest</tag>
+                                    </tags>
+                                    <ports>
+                                        <port>${app.port}</port>
+                                    </ports>
+                                    <labels>
+                                        <version>${project.version}</version>
+                                        <app>${project.build.finalName}</app>
+                                    </labels>
+                                    <maintainer>${project.organization.name}</maintainer>
+                                    <entryPoint>
+                                        <exec>
+                                            <arg>/app/bin/run</arg>
+                                            <arg>--server.port=${app.port}</arg>
+                                        </exec>
+                                    </entryPoint>
+                                    <workdir>/app</workdir>
+                                    <buildOptions>
+                                        <forcerm>1</forcerm>
+                                    </buildOptions>
+                                    <healthCheck>
+                                        <interval>10s</interval>
+                                        <timeout>3s</timeout>
+                                        <retries>3</retries>
+                                        <cmd>curl http://localhost:${app.port}/actuator/health || exit 1</cmd>
+                                    </healthCheck>
+                                    <assembly>
+                                        <mode>dir</mode>
+                                        <name>${project.build.finalName}</name>
+                                        <targetDir>/app</targetDir>
+                                        <descriptor>${project.basedir}/src/main/assembly/bin.xml</descriptor>
+                                        <exportTargetDir>/target</exportTargetDir>
+                                    </assembly>
+                                </build>
+                            </image>
+                        </images>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>build</goal>
+                                <!--                                <goal>push</goal>-->
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>io.github.git-commit-id</groupId>
+                    <artifactId>git-commit-id-maven-plugin</artifactId>
+                    <version>9.0.1</version>
+                    <executions>
+                        <execution>
+                            <id>compile</id>
+                            <goals>
+                                <goal>revision</goal>
+                            </goals>
+                            <phase>compile</phase>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <skip>false</skip>
+                        <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+                        <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                        <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
+                        </generateGitPropertiesFilename>
+                        <dateFormat>yyyy-MM-dd HH:mm:ss</dateFormat>
+                        <gitDescribe>
+                            <skip>false</skip>
+                            <always>false</always>
+                            <dirty>-dirty</dirty>
+                        </gitDescribe>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.3.1</version>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                        <propertiesEncoding>UTF-8</propertiesEncoding>
+                        <addDefaultExcludes>false</addDefaultExcludes>
+                        <delimiters>
+                            <delimiter>${resource.delimiter}</delimiter>
+                        </delimiters>
+                        <useDefaultDelimiters>false</useDefaultDelimiters>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>io.github.git-commit-id</groupId>
+                <artifactId>git-commit-id-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
